--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "meetflix-server",
+  "name": "meetflix-api",
   "version": "1.0.0",
   "main": "scr/app.ts",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/bin/www"
+    "dev": "SET DEBUG=meetflix-api:* & nodemon src/bin/www"
   },
   "dependencies": {
     "axios": "^0.27.2",
