--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "scr/app.ts",
   "license": "MIT",
   "scripts": {
-    "dev": "SET DEBUG=meetflix-api:* & nodemon src/bin/www"
+    "debug": "SET DEBUG=meetflix-api:*",
+    "dev": "nodemon -r tsconfig-paths/register src/bin/www",
+    "test": "jest --no-cache --setupFiles dotenv/config --force-exit"
   },
   "dependencies": {
     "axios": "^0.27.2",
@@ -42,6 +44,7 @@
     "@types/express-session": "^1.17.5",
     "@types/helmet": "^4.0.0",
     "@types/ioredis": "^4.28.10",
+    "@types/jest": "^28.1.6",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
@@ -50,6 +53,8 @@
     "@types/passport": "^1.0.9",
     "@types/passport-facebook": "^2.1.11",
     "@types/passport-google-oauth20": "^2.0.11",
+    "@types/set-cookie-parser": "^2.4.2",
+    "@types/supertest": "^2.0.12",
     "@types/validator": "^13.7.4",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
@@ -57,9 +62,14 @@
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^28.1.3",
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
+    "set-cookie-parser": "^2.5.1",
+    "supertest": "^6.2.4",
+    "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.0",
     "typescript": "^4.7.4"
   }
 }
