--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "proxy": "http://api.test.com/v1",
   "scripts": {
     "debug": "SET DEBUG=meetflix-api:*",
-    "dev": "nodemon -r tsconfig-paths/register src/bin/www",
+    "dev": "SET DEBUG=meetflix-api:* & nodemon -r tsconfig-paths/register src/bin/www",
     "test": "jest --no-cache --setupFiles dotenv/config --force-exit"
   },
   "dependencies": {
